@@ -10,6 +10,8 @@ Release ...
   a penalty for hyphenating the last word of a paragraph.
 * [nt]roff: A memory allocation error that could occur with extensive
   use of output-line traps has been fixed.
+* -ms: The ".IX" index macro now works in ".padj" mode.
+* -me: The ".(x" and ".)x" index macros now work in ".padj" mode.
 
 Release 061106
 * [nt]roff: Support for paragraph-based justification has been added,
